# XianyuAutoAgent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  XianyuAgent.py  XianyuApis.py  context_manager.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  refactoring_summary.md  run_tests.py  test_performance_optimization.py
config/: config.json  config_manager.py
core/: xianyu_live.py
managers/: heartbeat_manager.py  message_batcher.py  message_processor.py  token_manager.py  websocket_manager.py
tests/integration/: test_end_to_end.py  test_xianyu_live_integration.py
tests/performance/: test_performance.py
tests/unit/: test_config_manager.py  test_heartbeat_manager.py  test_message_processor.py  test_token_manager.py  test_websocket_manager.py
utils/: xianyu_utils.py
